completed notes page with ordered list and updated links between todo and notes.

--- a/Brian/django-projects/mysite/todo/templates/list.html
+++ b/Brian/django-projects/mysite/todo/templates/list.html
@@ -28,3 +28,7 @@
         {% endif %}
     {% endfor %}
 </ul>
+
+<form action="{% url 'note' %}">
+    <input type="submit" value="Go to the Note list" />
+</form>
